close #3 :white_check_mark: add tests for protected users endpoints :recycle: #3 fix messages :sparkles: add update user info db request :recycle: #3 get users fix  (if now rows in result) :recycle: #3 fix jwt parsing from auth header err :recycle: #3 little refactoring for integration tests #3 change registration dto :sparkles: #3 add signIn endpoint with JWT token stored in Redis with expiration (autoLogoffTime config)
